[tool.poetry]
name = "sitios-minca-linux"
version = "0.1.0"
description = "Aplicacion para administrar sitios turisticos en Minca"
authors = ["PabloSanchezB <pabloasb87@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
